new icons for create

--- a/create.html
+++ b/create.html
@@ -548,6 +548,7 @@
     .sb-icon-btn.teal-icon.active { background: rgba(0,210,255,0.12); color: var(--teal); }
     .sb-icon-btn.danger-icon.active { background: rgba(255,59,48,0.12); color: var(--danger); }
     .sb-icon { font-size: 21px; line-height: 1; }
+    .sb-custom-icon { width: 22px; height: 22px; object-fit: contain; display: block; }
     .sb-divider { width: 36px; height: 1px; background: #1a1a1a; margin: 4px 0; flex-shrink: 0; }
 
     /* ── SIDEBAR PANEL ── */
@@ -1099,12 +1100,12 @@
         <button class="tb-btn icon-btn" onclick="undo()" title="Undo (Ctrl+Z)">↩</button>
         <button class="tb-btn icon-btn" onclick="redo()" title="Redo (Ctrl+Y)">↪</button>
 
-        <!-- Onion skin - inline -->
-        <div id="onion-skin-control" style="display:none; gap:8px; align-items:center; background:rgba(255,255,255,0.04); padding:4px 10px; border-radius:8px; border:1px solid var(--border);">
-            <div style="display:flex; gap:5px; align-items:center;">
-                <input type="checkbox" id="onion-toggle" onchange="render()">
-                <label for="onion-toggle" style="font-size:9px; font-weight:900; color:var(--text); letter-spacing:0.5px;">ONION</label>
-            </div>
+        <!-- Onion skin - icon toggle button -->
+        <div id="onion-skin-control" style="display:none; gap:6px; align-items:center; background:rgba(255,255,255,0.04); padding:4px 8px; border-radius:8px; border:1px solid var(--border);">
+            <button id="onion-icon-btn" onclick="toggleOnionSkin()" title="Onion Skin" style="background:none;border:none;cursor:pointer;padding:2px;display:flex;align-items:center;justify-content:center;border-radius:6px;transition:0.2s;">
+                <img src="https://media.discordapp.net/attachments/1472088820584419450/1475988883614204018/Untitled52_20260224165244.png?ex=699f7d44&is=699e2bc4&hm=874e766336e8e7a12120d812f79cc4d607895bd29641ec44e3e89aefa80584a2&=&format=webp&quality=lossless" id="onion-icon-img" style="width:22px;height:22px;object-fit:contain;opacity:0.4;transition:opacity 0.2s, filter 0.2s;" alt="onion">
+            </button>
+            <input type="checkbox" id="onion-toggle" style="display:none;" onchange="render()">
             <input type="range" id="onion-opacity" min="0.1" max="0.7" step="0.1" value="0.3" oninput="render()" style="width:44px;">
         </div>
 
@@ -1141,29 +1142,29 @@
 
                 <!-- Add -->
                 <button class="sb-icon-btn" data-panel="add" onclick="toggleSidePanel('add')">
-                    <span class="sb-icon">➕</span>Add
+                    <span class="sb-icon"><img src="https://media.discordapp.net/attachments/1472088820584419450/1475738268531294349/Untitled50_20260224001655.png?ex=699f3c9d&is=699deb1d&hm=3e952823d71a8451fd45b94c2a8e2f5b92e693d9ca2cb3e79869c1bb5a4945f2&=&format=webp&quality=lossless" class="sb-custom-icon" alt="add"></span>Add
                 </button>
 
                 <!-- Background -->
                 <button class="sb-icon-btn" data-panel="background" onclick="toggleSidePanel('background')">
-                    <span class="sb-icon">🖼</span>BG
+                    <span class="sb-icon"><img src="https://media.discordapp.net/attachments/1472088820584419450/1476014886181011567/Untitled.png?ex=699f957b&is=699e43fb&hm=e0df44f7e1e168ec27e6204f00a5f2b985e41df4020cbbf0865ac8ab79ede02c&=&format=webp&quality=lossless" class="sb-custom-icon" alt="background"></span>BG
                 </button>
 
                 <!-- Layers -->
                 <button class="sb-icon-btn" data-panel="layers" onclick="toggleSidePanel('layers')">
-                    <span class="sb-icon">📚</span>Layers
+                    <span class="sb-icon"><img src="https://media.discordapp.net/attachments/1472088820584419450/1475735904231620699/Untitled50_20260224000728.png?ex=699f3a69&is=699de8e9&hm=a81ad82f44163fe2a2afbe9046d3ed4b0a81f5cd69f3fdcba041a94084b12c2b&=&format=webp&quality=lossless" class="sb-custom-icon" alt="layers"></span>Layers
                 </button>
 
                 <div class="sb-divider"></div>
 
                 <!-- Edit/Transform (opens floating panel) -->
                 <button class="sb-icon-btn teal-icon" data-action="edit" onclick="sbEditAction()">
-                    <span class="sb-icon">🔧</span>Edit
+                    <span class="sb-icon"><img src="https://media.discordapp.net/attachments/1472088820584419450/1475740938910568600/Untitled50_20260224002716.png?ex=699f3f19&is=699ded99&hm=30eaf2b064268c3e30d7bea8fb0a52fcff552c42c5c1500ec8a89586b51cce0a&=&format=webp&quality=lossless" class="sb-custom-icon" alt="edit"></span>Edit
                 </button>
 
                 <!-- FX (opens floating panel) -->
                 <button class="sb-icon-btn teal-icon" id="fx-btn" onclick="toggleFxPanel()">
-                    <span class="sb-icon">🎨</span>FX
+                    <span class="sb-icon"><img src="https://media.discordapp.net/attachments/1472088820584419450/1475743931755925720/Untitled50_20260224003926.png?ex=699f41e3&is=699df063&hm=73efb25b11c45a422741bc6f84621181e94aa3d39f92e261ad2b5f836ddb3a66&=&format=webp&quality=lossless" class="sb-custom-icon" alt="fx"></span>FX
                 </button>
 
             </div>
@@ -2185,6 +2186,20 @@
         img.src = src;
     }
     function toggleDrawer() { document.getElementById('frame-drawer').classList.toggle('open'); }
+
+    function toggleOnionSkin() {
+        const cb  = document.getElementById('onion-toggle');
+        const img = document.getElementById('onion-icon-img');
+        cb.checked = !cb.checked;
+        if (cb.checked) {
+            img.style.opacity = '1';
+            img.style.filter  = 'drop-shadow(0 0 6px #00d2ff) drop-shadow(0 0 12px rgba(0,210,255,0.6))';
+        } else {
+            img.style.opacity = '0.4';
+            img.style.filter  = 'none';
+        }
+        render();
+    }
     function handleExit() { 
         if (frames && frames.length) saveOffline(true);
         location.href = 'index.html'; 
