fixed login redirect and discover

--- a/discover.html
+++ b/discover.html
@@ -420,13 +420,26 @@ opacity: 0; transition: .25s; z-index: 9999; white-space: nowrap; pointer-events
 
 /* ── Bottom nav ── */
 .bottom-nav {
-position: fixed; bottom: 0; left: 0; right: 0;
-background: rgba(0,0,0,.95); border-top: 1px solid #2c2c2e;
-display: flex; justify-content: space-around; padding: 10px 0 calc(10px + env(safe-area-inset-bottom));
-z-index: 500; backdrop-filter: blur(12px);
+  position: fixed; bottom: 0; left: 0; right: 0;
+  background: rgba(12,12,14,.97);
+  border-top: 1px solid rgba(255,255,255,.06);
+  display: flex; justify-content: space-around; align-items: center;
+  padding: 8px 16px calc(8px + env(safe-area-inset-bottom));
+  z-index: 500; backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
-.nav-item { font-size: 22px; cursor: pointer; opacity: .4; text-decoration: none; color: #f5f5f7; transition: .15s; }
-.nav-item.active { opacity: 1; color: #ff7a00; }
+.nav-item {
+  display: flex; flex-direction: column; align-items: center; gap: 3px;
+  text-decoration: none; color: #f5f5f7; cursor: pointer;
+  flex: 1; transition: .2s; padding: 4px 0;
+  border-radius: 12px;
+}
+.nav-item .nav-icon { font-size: 22px; transition: transform .2s; line-height: 1; }
+.nav-item .nav-label { font-size: 9px; font-weight: 800; letter-spacing: .4px; opacity: 0; transition: .2s; color: #ff7a00; text-transform: uppercase; }
+.nav-item.active .nav-icon { transform: scale(1.15); }
+.nav-item.active .nav-label { opacity: 1; }
+.nav-item:not(.active) { opacity: .35; }
+.nav-item:not(.active):hover { opacity: .65; }
 
 /* ── Loading Screen ── */
 #loading-screen {
@@ -599,11 +612,22 @@ z-index: 500; backdrop-filter: blur(12px);
 <!-- Bottom nav -->
 
 <div class="bottom-nav">
-  <a href="index.html"    class="nav-item">🏠</a>
-  <a href="discover.html" class="nav-item active">🔍</a>
-  <a href="teams.html"    class="nav-item">⚡</a>
-  <a href="messages.html" class="nav-item">💬</a>
-  <a href="profile.html"  class="nav-item">👤</a>
+  <a href="index.html"    class="nav-item">
+    <span class="nav-icon">🏠</span>
+    <span class="nav-label">Home</span>
+  </a>
+  <a href="discover.html" class="nav-item active">
+    <span class="nav-icon">🔍</span>
+    <span class="nav-label">Discover</span>
+  </a>
+  <a href="squads.html"   class="nav-item">
+    <span class="nav-icon">👥</span>
+    <span class="nav-label">Squads</span>
+  </a>
+  <a href="profile.html"  class="nav-item">
+    <span class="nav-icon">👤</span>
+    <span class="nav-label">Profile</span>
+  </a>
 </div>
 
 <script>
