--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,33 +1,237 @@
-<link rel="stylesheet" href="theme.css">
-<script src="theme.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="theme.css">
+  <script src="theme.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ComicCore | Reset Password</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap');
 
-<script>
-  // Connect to your specific project
-  const SUPABASE_URL = 'https://mmycqeejhguzhtzkyjaj.supabase.co'; 
-  const SUPABASE_KEY = 'sb_publishable_8Du2GAcH5oBeiHWe-1e0Fg_XtSub2QE';
-  const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-  async function sendReset() {
-    const email = document.getElementById('user-email').value;
-    
-    if (!email.includes('@')) {
-      alert('Please enter a valid email address.');
-      return;
+    body {
+      margin: 0; padding: 40px 0 60px;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--bg-dark);
+      display: flex; flex-direction: column; align-items: center; min-height: 100vh;
     }
 
-    // This is the magic command that tells Supabase to send the reset link
-    const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-      redirectTo: 'https://sites.google.com/view/comiccore/forgot-password', 
+    .brand-header { color: white; font-size: 28px; font-weight: 900; margin-bottom: 30px; letter-spacing: -0.5px; }
+
+    .container {
+      background: #fff; width: 90%; max-width: 400px;
+      border-radius: 28px; padding: 36px 32px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.8); box-sizing: border-box;
+      text-align: center;
+    }
+
+    .page-icon { font-size: 44px; margin-bottom: 12px; display: block; }
+    h2 { margin: 0 0 8px; font-size: 22px; font-weight: 900; color: #111; }
+    .subtitle { color: #888; font-size: 13px; font-weight: 600; margin-bottom: 28px; line-height: 1.5; }
+
+    .status-banner { padding: 12px; border-radius: 12px; margin-bottom: 18px; font-size: 13px; display: none; text-align: center; font-weight: 600; }
+    .success { background: #e6fffa; color: #276749; border: 1px solid #b2f5ea; }
+    .error   { background: #fff5f5; color: #c53030; border: 1px solid #feb2b2; }
+
+    .input-group { margin-bottom: 16px; position: relative; text-align: left; }
+    .input-label { position: absolute; top: -8px; left: 20px; background: white; padding: 0 5px; font-size: 11px; color: var(--vibrant-orange); font-weight: 700; z-index: 1; }
+    .input-group input {
+      width: 100%; padding: 15px 22px;
+      border: 1.5px solid #ddd; border-radius: 50px;
+      box-sizing: border-box; font-size: 15px; outline: none;
+      font-family: 'Inter', sans-serif; transition: border-color .2s;
+    }
+    .input-group input:focus { border-color: var(--vibrant-orange); }
+
+    .pass-wrap { position: relative; }
+    .pass-wrap input { padding-right: 50px !important; }
+    .eye-btn { position: absolute; right: 18px; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer; font-size: 18px; color: #bbb; padding: 0; line-height: 1; }
+    .eye-btn:hover { color: #555; }
+
+    .btn { width: 100%; padding: 16px; border: none; border-radius: 50px; font-weight: 800; font-size: 15px; cursor: pointer; background: var(--vibrant-orange); color: white; margin-top: 4px; transition: filter .15s, transform .1s; }
+    .btn:hover   { filter: brightness(1.08); }
+    .btn:active  { transform: scale(.98); }
+    .btn:disabled { opacity: .5; cursor: not-allowed; }
+
+    .back-link { display: block; text-align: center; margin-top: 18px; font-size: 12px; color: #aaa; text-decoration: none; font-weight: 600; }
+    .back-link:hover { color: var(--vibrant-orange); }
+
+    /* Success state */
+    #success-message { display: none; }
+    .success-icon { font-size: 52px; display: block; margin-bottom: 14px; }
+    .success-title { font-size: 20px; font-weight: 900; color: #276749; margin-bottom: 8px; }
+    .success-body  { font-size: 13px; color: #555; font-weight: 600; line-height: 1.6; }
+    .email-highlight { color: var(--vibrant-orange); font-weight: 800; }
+
+    /* New password state */
+    #new-pass-form { display: none; }
+  </style>
+</head>
+<body>
+
+<div class="brand-header">ComicCore</div>
+
+<div class="container">
+
+  <!-- Step 1: Enter email to request reset -->
+  <div id="reset-form">
+    <span class="page-icon">🔑</span>
+    <h2>Forgot Password?</h2>
+    <p class="subtitle">Enter your email and we'll send you a link to reset your password.</p>
+
+    <div id="status-banner" class="status-banner"></div>
+
+    <div class="input-group">
+      <span class="input-label">Email</span>
+      <input type="email" id="user-email" placeholder="you@email.com"
+        onkeydown="if(event.key==='Enter') sendReset()">
+    </div>
+
+    <button class="btn" id="reset-btn" onclick="sendReset()">Send Reset Link</button>
+    <a class="back-link" href="login.html">← Back to Login</a>
+  </div>
+
+  <!-- Step 2: Email sent confirmation -->
+  <div id="success-message">
+    <span class="success-icon">📬</span>
+    <div class="success-title">Check your inbox!</div>
+    <p class="success-body">
+      We sent a password reset link to<br>
+      <span class="email-highlight" id="display-email"></span><br><br>
+      Click the link in the email to set a new password. It may take a minute to arrive — check your spam folder too.
+    </p>
+    <a class="back-link" href="login.html" style="margin-top:24px;">← Back to Login</a>
+  </div>
+
+  <!-- Step 3: Set new password (user arrives here after clicking email link) -->
+  <div id="new-pass-form">
+    <span class="page-icon">🔐</span>
+    <h2>Set New Password</h2>
+    <p class="subtitle">Choose a strong password for your account.</p>
+
+    <div id="newpass-status" class="status-banner"></div>
+
+    <div class="input-group">
+      <span class="input-label">New Password</span>
+      <div class="pass-wrap">
+        <input type="password" id="new-pass" placeholder="At least 6 characters">
+        <button class="eye-btn" type="button" onclick="toggleEye('new-pass','eye-new')">
+          <span id="eye-new">👁</span>
+        </button>
+      </div>
+    </div>
+
+    <div class="input-group">
+      <span class="input-label">Confirm Password</span>
+      <div class="pass-wrap">
+        <input type="password" id="confirm-pass" placeholder="Repeat your password"
+          onkeydown="if(event.key==='Enter') updatePassword()">
+        <button class="eye-btn" type="button" onclick="toggleEye('confirm-pass','eye-confirm')">
+          <span id="eye-confirm">👁</span>
+        </button>
+      </div>
+    </div>
+
+    <button class="btn" id="update-btn" onclick="updatePassword()">Update Password</button>
+  </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const _sb = supabase.createClient(
+    'https://mmycqeejhguzhtzkyjaj.supabase.co',
+    'sb_publishable_8Du2GAcH5oBeiHWe-1e0Fg_XtSub2QE'
+  );
+
+  // ── On load: check if this is a recovery link click ──
+  // Supabase puts #type=recovery&access_token=... in the URL
+  window.addEventListener('load', async () => {
+    const hash = window.location.hash;
+    const params = new URLSearchParams(hash.replace('#', '?'));
+    const type = params.get('type');
+
+    if (type === 'recovery') {
+      // Let Supabase SDK exchange the token into a session
+      const { error } = await _sb.auth.getSession();
+      if (!error) {
+        // Hide the email-request form, show the new-password form
+        document.getElementById('reset-form').style.display = 'none';
+        document.getElementById('new-pass-form').style.display = 'block';
+        // Clean the URL
+        history.replaceState(null, '', window.location.pathname);
+      }
+    }
+  });
+
+  // ── Step 1: Send the reset email ──
+  async function sendReset() {
+    const email = document.getElementById('user-email').value.trim();
+    const btn   = document.getElementById('reset-btn');
+
+    if (!email || !email.includes('@')) {
+      return showStatus('status-banner', 'Please enter a valid email address.', 'error');
+    }
+
+    btn.disabled = true;
+    btn.textContent = 'Sending…';
+
+    const { error } = await _sb.auth.resetPasswordForEmail(email, {
+      // Redirect back to THIS page — Supabase will append #type=recovery to the URL
+      redirectTo: window.location.href.split('?')[0].split('#')[0]
     });
 
     if (error) {
-      alert('Error: ' + error.message);
+      showStatus('status-banner', 'Error: ' + error.message, 'error');
+      btn.disabled = false;
+      btn.textContent = 'Send Reset Link';
     } else {
-      // If no error, show your success message
-      document.getElementById('display-email').innerText = email;
+      document.getElementById('display-email').textContent = email;
       document.getElementById('reset-form').style.display = 'none';
       document.getElementById('success-message').style.display = 'block';
     }
   }
+
+  // ── Step 2: Update the password after clicking the email link ──
+  async function updatePassword() {
+    const newPass     = document.getElementById('new-pass').value;
+    const confirmPass = document.getElementById('confirm-pass').value;
+    const btn         = document.getElementById('update-btn');
+
+    if (newPass.length < 6) {
+      return showStatus('newpass-status', 'Password must be at least 6 characters.', 'error');
+    }
+    if (newPass !== confirmPass) {
+      return showStatus('newpass-status', 'Passwords don\'t match.', 'error');
+    }
+
+    btn.disabled = true;
+    btn.textContent = 'Updating…';
+
+    const { error } = await _sb.auth.updateUser({ password: newPass });
+
+    if (error) {
+      showStatus('newpass-status', 'Error: ' + error.message, 'error');
+      btn.disabled = false;
+      btn.textContent = 'Update Password';
+    } else {
+      showStatus('newpass-status', '✅ Password updated! Redirecting to login…', 'success');
+      setTimeout(() => { window.location.href = 'login.html'; }, 1800);
+    }
+  }
+
+  function toggleEye(inputId, iconId) {
+    const inp  = document.getElementById(inputId);
+    const icon = document.getElementById(iconId);
+    inp.type = inp.type === 'password' ? 'text' : 'password';
+    icon.textContent = inp.type === 'password' ? '👁' : '🙈';
+  }
+
+  function showStatus(id, msg, type) {
+    const b = document.getElementById(id);
+    b.innerText = msg;
+    b.className = 'status-banner ' + type;
+    b.style.display = 'block';
+  }
 </script>
+</body>
+</html>
